[#424] move objectos to Java 20 + preview features
$source=3196a8d6d9f4c9aef3ecf5c778fd43356a2f88f5$